force-app/main/default/objects/custom_create99__c/custom_create99__c.object-meta.xml
<CustomObject>
    <label>Custom created object99</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects99</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>