force-app/main/default/objects/custom_create99__c/fields/custom_create_99field520__c.field-meta.xml
<CustomField>
    <fullName>custom_create_99field520__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 99field520</label>
    <type>Checkbox</type>
</CustomField>