force-app/main/default/objects/custom_create99__c/fields/custom_create_99field535__c.field-meta.xml
<CustomField>
    <fullName>custom_create_99field535__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 99field535</label>
    <type>Checkbox</type>
</CustomField>